# 2d-game-engine-with-ecs

./: .gitignore  CMakeLists.txt
Source/: Game.cpp  Game.h  Main.cpp
Source/Components/: RigidbodyComponent.h  SpriteComponent.h  TransformComponent.h
Source/ECS/: ECS.cpp  ECS.h
Source/Game/: Game.cpp  Game.h
Source/Logger/: Logger.cpp  Logger.h
Source/Systems/: MovementSystem.h  RenderSystem.h
